tests/baselines/reference/collisionSuperAndLocalVarInAccessors.errors.txt
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(3,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(7,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(12,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(13,13): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(16,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(17,13): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(21,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(23,17): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(27,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts(29,17): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.


==== tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts (10 errors) ====
    var _super = 10; // No Error
    class Foo {
        get prop1(): number {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var _super = 10; // No error
            return 10;
        }
        set prop1(val: number) {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var _super = 10; // No error
        }
    }
    class b extends Foo {
        get prop2(): number {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var _super = 10; // Should be error
                ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            return 10;
        }
        set prop2(val: number) {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var _super = 10; // Should be error
                ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
        }
    }
    class c extends Foo {
        get prop2(): number {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var x = () => {
                var _super = 10; // Should be error
                    ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
            return 10;
        }
        set prop2(val: number) {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var x = () => {
                var _super = 10; // Should be error
                    ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
        }
    }